--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+:root {
+	@apply min-h-screen bg-gradient-to-b from-gray-900 via-purple-900 to-indigo-900 text-gray-200;
+}
